--- a/node-project/views/partials/header.ejs
+++ b/node-project/views/partials/header.ejs
@@ -8,7 +8,7 @@
           <li><a href="/users/reg">Register</a></li>
           <li><a href="/users/authorization">Log in</a></li>
         <% } else { %>
-          <li><a href="/chat">Chat</a></li>
+          <li><a href="/users/chat">Chat</a></li>
           <li><a href="/users/logout">Log out</a></li>
           <li>You are <%= user.name %></li>
         <% } %>
