--- a/node-project/views/chat.ejs
+++ b/node-project/views/chat.ejs
@@ -1,7 +1,9 @@
 <h1>Chat</h1>
-<form action="" id="messageForm">
+<form id="messageForm">
     <textarea id="messageBox" cols="50" rows="3" placeholder="Input your message"></textarea>
+    <input type="submit" id="submit">
     <div id="chatBox"></div>
 </form>
+
 <script src="/socket.io/socket.io.js"></script>
-<script src="script/script.js"></script>
+<script src="/script/script.js"></script>
